# DevOps-DevSecOps

./: README.md
01-Introduction/: README.md
02-building-blocks/: README.md
03-MongoDB-Atlas/: README.md
04-CRUD/: README.md
05-Demo-DevOps-Log-Explorer/: README.md
06-MongoDB-for-AI-Apps/: README.md
O2-demo-main/O2-demo-main/: README.md  benchmarking.md  run-all.sh
O2-demo-main/O2-demo-main/app/logstorm/: Dockerfile  generators.go  go.mod  main.go
O2-demo-main/O2-demo-main/benchmark/: generate-report.sh  parse_resources.py  query_benchmark.py  run-benchmark.sh  run-live-benchmark.sh
O2-demo-main/O2-demo-main/benchmark/queries/: openobserve-queries.sh  opensearch-queries.sh
O2-demo-main/O2-demo-main/deploy/fluentbit/: configmap.yaml  daemonset.yaml
O2-demo-main/O2-demo-main/deploy/logstorm/: deployment.yaml
O2-demo-main/O2-demo-main/infra/: kind-config.yaml  setup-cluster.sh
cloud-native-fintech-platform/: README.md  docker-compose.yml
cloud-native-fintech-platform/ci-cd/: pipeline.yml
cloud-native-fintech-platform/services/payment-service/: Dockerfile  main.go
cloud-native-fintech-platform/web3/: contract.sol
rust-cicd-demo-main (1)/rust-cicd-demo-main/: Cargo.toml  Dockerfile  README.md  index.html
rust-cicd-demo-main (1)/rust-cicd-demo-main/helm/rust-todo/: Chart.yaml  values.yaml
rust-cicd-demo-main (1)/rust-cicd-demo-main/helm/rust-todo/templates/: _helpers.tpl  deployment.yaml  pvc.yaml  serviceaccount.yaml
rust-cicd-demo-main (1)/rust-cicd-demo-main/src/: App.tsx  main.rs  models.rs  storage.rs
(+6 files in other folders)
